--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     
   </div>
   <div class="card-body">
-    
+
   </div>
 </a>
 
@@ -161,7 +161,7 @@
   
               <div class="m-foot-logo text-center"><img src="https://freefiremobile-a.akamaihd.net/ffwebsite/images/logo_small_foot.png"></div>
   <br>
-              <div class="txt text-center">Copyright © Garena International.<br>Trademarks belong to their respective owners. All rights Reserved.</div>
+              <div class="txt text-center">Copyright © Garena International.<br>All rights Reserved.</div>
               <div class="text-center">
   <a href="privacy.php" class="text-center">Privacy Policy -</a>
   <a href="contact.php" class="text-center">Contact US</a>
