--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
                       <img src="images/criminal.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
                       <h5 class="card-title text-center">هل تريد عودة الكريمينال</h5>
+                      <p class="card-text text-center">إذا كان توقعك صحيح ستحصل على حزمة الكريمينال مجانا بعد إنتهاء التصويت</p>
                       <p class="card-text text-center">يمكنك تصويت عبر إختيارات أسفله</p>
+                      
 
 
                       <div class="d-flex justify-centent-end flex-column text-right">
