--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <div class="container-fluid d-flex justify-content-center flex-column align-items-center">
 
                 <div class="alert alert-info text-center shadow-sm p-3 bg-white rounded">
-                    صوت وقرر عودة الكريمينال
+                    صوت الآن وحصل على حزمة الكريمينال
                 </div>
 
                   <div class="card shadow bg-white rounded" style="width: 80%;">
